overlays/demo/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:    
    rules:
      - http:
          paths:
            - path: /demo
              pathType: Prefix
              backend:
                serviceName: webapplication
                servicePort: 80
